tests/toy/pos/000065_cdrc2.toylang
program a = { if a + a then a = a else sleep; } .
