tests/toy/neg/001017_mutation.toylang
program a = { if a then sleep else else; } .
